--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# cache files
 __pycache__/
+
+# user-specific files
 res/highscore.txt
 res/Perm_point.txt
+
+# mac-os specific files
+# These files will not be generated on Windows Systems, so ignore them if you are developing on Windows.
+.DS_Store
